# sovereign-compiler

./: Cargo.toml  FONTANA.md  README.md  SNAPKITTY-CONSTITUTION.md  SOVEREIGN.md
fontana/admissibility/: admissibility.rs
fontana/ast/: ast.rs
fontana/grammar/: grammar.rs
lean/: Contractivity.lean  RootFontana.lean  Strata.lean  Verification.lean  lean_bridge.rs
rust/src/: archivum.rs  contractivity.rs  execution.rs  governance.rs  lib.rs  observatory.rs  witness.rs
src/: lib.rs
