[package]
name = "sovereign-compiler"
version = "0.1.0"
edition = "2021"
description = "Circuit IR: Gate, Qubit, Circuit, Measurement"
license = "MIT OR Apache-2.0"
authors = ["SnapKitty Collective"]
repository = "https://github.com/SNAPKITTYWEST/sovereign-compiler"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
