[package]
name = "root-fontana"
version = "0.1.0"
edition = "2021"
description = "Root Fontana — Constitutional compiler layer for SnapKitty"
license = "SEE LICENSE IN SOVEREIGN.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.13"

[lints]
deny(warnings)
deny(unsafe_code)
